# ds_mobile_speed_estimation

./: .gitignore  CMakeLists.txt  LICENSE  main.cpp
cfg/: config_infer_primary_yoloV3.txt  config_infer_primary_yoloV7.txt  config_infer_primary_yolor.txt  config_infer_secondary_yoloV7.txt  config_nvdsanalytics.txt  config_tracker_DeepSORT.yml  config_tracker_NvDCF_perf.yml  ds_tiny_yolo_v2.txt
include/: IOU_tracker.cpp  IOU_tracker.h  ds_yolo.cpp  ds_yolo.h  fast.cpp  fast.h  nonmaxSupp.cpp  speedEstimationplg.cpp  speedEstimationplg.h
lib/DeepStream-Yolo7/: yolodecoder.py
lib/DeepStream-Yolo7/custom_Impl_Plate_Yolo/: Makefile  nvdsparsebbox_Yolo.cpp  nvdsparsebbox_Yolo.h  utils
lib/DeepStream-Yolo7/docs/: YOLOv5.md
lib/DeepStream-Yolo7/nvdsinfer_custom_impl_Yolo_Onnx/: Makefile  nvdsparsebbox_Yolo.cpp
lib/Tracker/: CMakeLists.txt  Ctracker.cpp  TrackerSettings.h
lib/plateInfo/: Makefile
lib/plateInfo/include/: plateInfo.h
lib/plateInfo/lib/: Makefile
lib/plateInfo/src/: plateInfo.cpp
lib/yolo7/v_0.1/: makefile  nvdsparsebbox_yolo_plt.cpp
lib/yoloplt/: makefile  nvdsparsebbox_yolo_plt.cpp
lib/yolor/: Makefile  calibrator.cpp  calibrator.h  nvdsinfer_yolo_engine.cpp  nvdsparsebbox_Yolo.cpp  readme.txt  sortDetections.cu  utils.cpp  utils.h  yolo.cpp  yolo.h  yoloForward.cu  yoloForward_e.cu  yoloForward_nc.cu  yoloForward_r.cu  yoloForward_v2.cu  yoloPlugins.cpp  yoloPlugins.h
lib/yolov2/: makefile  nvdsparsebbox_tiny_yolo.cpp
utils/: calculateCameraParameters.py  test_formula.py
